--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- 移动端核心适配标签：确保自适应屏幕，禁止用户缩放 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>圣诞苹果惊喜（手机适配版）</title>
+    <title>阿衿的圣诞苹果</title>
     <style>
         /* 页面基础样式 */
         * {
@@ -231,3 +231,4 @@
     </script>
 </body>
 </html>
+
